--- a/index.html
+++ b/index.html
@@ -2,110 +2,139 @@
 <html lang="ru">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-    <title>Дизайн общественных пространст</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
+  <title>Дизайн общественных пространст</title>
 </head>
 
 <body>
 
-    <header>
-        <!-- код шапки -->
-    </header>
+  <header>
+    <!-- код шапки -->
+  </header>
 
-    <main class="page-body">
+  <main class="page-body">
 
-        <section class="main-area">
-            <div class="wrapper">
-                <div class="wysiwyg-wrapper">
-                    <!-- здесь будет вставлен код WYSIWYG радактора -->
-                    <h1>Посмотрим заголовок h1 с текстом на нескольких строках, стоит посмотреть как он будет
-                        переноситься, потому что заголовки могут быть длиннее, чем указал дизайнер в макете</h1>
-                    <h2>То же самое с заголовком второго уровня, посмотрим как будет смотреться текст на нескольких
-                        строках</h2>
-                    <p>Заказчик знал команду, следил за нашей деятельностью, поэтому никого больше не рассматривал —
-                        поручил дизайн парадных и лаунж-зон нам. Основными моментами, на которые мы оринтировались,
-                        стали:</p>
-                    <p>Повторим параграф, чтобы посмотреть отступы между двумя параграфами подряд. Повторим параграф,
-                        чтобы посмотреть отступы между двумя параграфами подряд. Повторим параграф, чтобы посмотреть
-                        отступы между двумя параграфами подряд. </p>
-                    <h3>Заголовок третьего уровня поставим где-нибудь и тоже напишем больше текста, чтобы он переносился
-                        на несколько строк и мы сразу проверили переполнение:</h3>
-                    <ul>
-                        <li>Источники вдохновения планировалось искать в строгой геометрии, модерне и духе «ревущих
-                            двадцатых» Источники вдохновения планировалось искать в строгой геометрии, модерне и духе
-                            «ревущих двадцатых»;</li>
-                        <li>Ключевой элемент дизайна любого общественного пространства — удобство для жителей.</li>
-                    </ul>
-                    <p>Добавим параграф после списка, чтобы посмотреть отступы после списка. Добавим параграф после
-                        списка, чтобы посмотреть отступы после списка. Добавим параграф после списка, чтобы посмотреть
-                        отступы после списка. </p>
-                    <blockquote>«Нам хотелось поддержать внешнюю архитектурную концепцию, но внутри добавить что-то
-                        необычное. Сделать некое подобие матрешки, чтобы все время открывались новые смыслы и элементы».
-                    </blockquote>
-                    <p>Добавим параграф после цитаты, чтобы посмотреть отступ после цитаты. Добавим параграф после
-                        цитаты, чтобы посмотреть отступ после цитаты. Добавим параграф после цитаты, чтобы посмотреть
-                        отступ после цитаты. Добавим параграф после цитаты, чтобы посмотреть отступ после цитаты.
-                        Добавим параграф после цитаты, чтобы посмотреть отступ после цитаты. </p>
-                </div>
+    <section class="main-area">
+      <div class="wrapper">
+        <div class="wysiwyg-wrapper">
+          <!-- здесь будет вставлен код WYSIWYG радактора -->
+          <h1>Посмотрим заголовок h1 с текстом на нескольких строках, стоит посмотреть как он будет
+            переноситься, потому что заголовки могут быть длиннее, чем указал дизайнер в макете</h1>
+          <h2>То же самое с заголовком второго уровня, посмотрим как будет смотреться текст на нескольких
+            строках</h2>
+          <p>Заказчик знал команду, следил за нашей деятельностью, поэтому никого больше не рассматривал —
+            поручил дизайн парадных и лаунж-зон нам. Основными моментами, на которые мы оринтировались,
+            стали:</p>
+          <p>Повторим параграф, чтобы посмотреть отступы между двумя параграфами подряд. Повторим параграф,
+            чтобы посмотреть отступы между двумя параграфами подряд. Повторим параграф, чтобы посмотреть
+            отступы между двумя параграфами подряд. </p>
+          <h3>Заголовок третьего уровня поставим где-нибудь и тоже напишем больше текста, чтобы он переносился
+            на несколько строк и мы сразу проверили переполнение:</h3>
+          <ul>
+            <li>Источники вдохновения планировалось искать в строгой геометрии, модерне и духе «ревущих
+              двадцатых» Источники вдохновения планировалось искать в строгой геометрии, модерне и духе
+              «ревущих двадцатых»;</li>
+            <li>Ключевой элемент дизайна любого общественного пространства — удобство для жителей.</li>
+          </ul>
+          <p>Добавим параграф после списка, чтобы посмотреть отступы после списка. Добавим параграф после
+            списка, чтобы посмотреть отступы после списка. Добавим параграф после списка, чтобы посмотреть
+            отступы после списка. </p>
+          <blockquote>«Нам хотелось поддержать внешнюю архитектурную концепцию, но внутри добавить что-то
+            необычное. Сделать некое подобие матрешки, чтобы все время открывались новые смыслы и элементы».
+          </blockquote>
+          <p>Добавим параграф после цитаты, чтобы посмотреть отступ после цитаты. Добавим параграф после
+            цитаты, чтобы посмотреть отступ после цитаты. Добавим параграф после цитаты, чтобы посмотреть
+            отступ после цитаты. Добавим параграф после цитаты, чтобы посмотреть отступ после цитаты.
+            Добавим параграф после цитаты, чтобы посмотреть отступ после цитаты. </p>
+        </div>
 
-            </div>
-        </section>
+      </div>
+    </section>
 
-        <section class="order">
-            <div class="wrapper">
-                <!-- здесь будет секция с формой -->
-            </div>
-        </section>
-
-        <section class="reviews">
-            <div class="wrapper">
-              <div class="reviews-wrapper">
-                <div class="review-item">
-                  <div class="review-image-wrapper">
-                    <img src="img/user-1.jpg" alt="" width="50" height="50">
-                  </div>
-                  <p class="review-name">
-                    Иван Грачев
-                  </p>
-                  <p class="review-text">
-                    Очень самобытный и необычный проект.
-                  </p>
-                </div>
-                <div class="review-item">
-                  <div class="review-image-wrapper">
-                    <img src="img/user-2.jpg" alt="" width="50" height="50">
-                  </div>
-                  <p class="review-name">
-                    Мария Рачинская
-                  </p>
-                  <p class="review-text">
-                    Мне особенно понравилось решение лестничных клеток. Кружки вообще очень стильные!
-                  </p>
-                </div>
-                <div class="review-item">
-                  <div class="review-image-wrapper">
-                    <img src="img/user-3.jpg" alt="" width="50" height="50">
-                  </div>
-                  <p class="review-name">Светлана</p>
-                  <p class="review-text">
-                    Очень нравится, что в городе развиваются такие проекты. Надеюсь, такие проекты скоро будут не только в частных домах, но и в кафе, музеях, театрах. Я бы сходила!
-                  </p>
+    <section class="order">
+      <div class="wrapper">
+        <h2 class="order-title">Оставить отзыв</h2>
+        <div class="order-form">
+          <!-- Отсюда код будет удален и заменен на код вставки плагина -->
+          <div class="wpcf7"> <!-- обертка с классом, которую создаcт плагин -->
+            <form action="" class="wpcf7-form"> <!-- тег формы с классом, которую создаcт плагин -->
+              <p>
+                <span class="wpcf7-form-control-wrap">
+                  <textarea class="wpcf7-textarea" cols="40" rows="10" placeholder="Расскажите, что вы думаете о проекте"></textarea>
+                </span>
+              </p>
+              <p>
+                <span class="wpcf7-form-control-wrap">
+                  <input type="text" size="40" class="wpcf7-text" placeholder="Ваше имя">
+                </span>
+              </p>
+              <div class="order-submit-area"> <!-- обертка для создания колонок -->
+                <p>
+                  <input type="submit" value="Отправить" class="wpcf7-submit">
+                  <span class="ajax-loader"></span>
+                </p>
+                <div class="order-text"> <!-- div лучше параграфа или span, так как к div CF7 не добавляет оберток -->
+                  Отзыв будет добавлен после проверки модератором
                 </div>
               </div>
+            </form>
+          </div>
+          <!-- Досюда код будет удален и заменен на код вставки плагина -->
+        </div>
+      </div>
+    </section>
+
+
+    <section class="reviews">
+      <div class="wrapper">
+        <div class="reviews-wrapper">
+          <div class="review-item">
+            <div class="review-image-wrapper">
+              <img src="img/user-1.jpg" alt="" width="50" height="50">
             </div>
-          </section>
+            <p class="review-name">
+              Иван Грачев
+            </p>
+            <p class="review-text">
+              Очень самобытный и необычный проект.
+            </p>
+          </div>
+          <div class="review-item">
+            <div class="review-image-wrapper">
+              <img src="img/user-2.jpg" alt="" width="50" height="50">
+            </div>
+            <p class="review-name">
+              Мария Рачинская
+            </p>
+            <p class="review-text">
+              Мне особенно понравилось решение лестничных клеток. Кружки вообще очень стильные!
+            </p>
+          </div>
+          <div class="review-item">
+            <div class="review-image-wrapper">
+              <img src="img/user-3.jpg" alt="" width="50" height="50">
+            </div>
+            <p class="review-name">Светлана</p>
+            <p class="review-text">
+              Очень нравится, что в городе развиваются такие проекты. Надеюсь, такие проекты скоро будут не только в
+              частных домах, но и в кафе, музеях, театрах. Я бы сходила!
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
 
 
-    </main>
+  </main>
 
-    <footer>
-        <!-- код футера -->
-    </footer>
+  <footer>
+    <!-- код футера -->
+  </footer>
 
 </body>
 
